styles.css
/* lists and bullets */
.bullet-plugin-better-lists .cm-s-obsidian .HyperMD-list-line {
  /* padding-top: 0.4em; */
}

.bullet-plugin-better-lists .cm-formatting-list-ul {
  margin-right: 0.3em;
}

.bullet-plugin-better-lists .list-bullet {
  position: relative;
}

.bullet-plugin-better-lists .list-bullet::after {
  position: absolute;
  z-index: 1;
  width: 7px;
  height: 7px;
  border-radius: 50%;
  background-color: var(--text-muted);
}

body:not(.is-mobile).bullet-plugin-better-lists
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line:has(.cm-fold-indicator)
  .list-bullet::after {
  transition: none;
}

body:not(.is-mobile).bullet-plugin-better-lists
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line
  .is-collapsed
  ~ .cm-formatting-list
  .list-bullet::after {
  background-color: var(--text-muted);
  box-shadow: none;
  transition: none;
}

body:not(.is-mobile).bullet-plugin-better-lists
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line:has(.cm-fold-indicator)
  .list-bullet:hover::before,
body:not(.is-mobile).bullet-plugin-better-lists
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line
  .is-collapsed
  ~ .cm-formatting-list
  .list-bullet::before {
  content: "";
  position: absolute;
  inset-block-start: calc(50% - 9px);
  inset-inline-start: calc(50% - 9px);
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: color-mix(in srgb, var(--text-muted) 38%, transparent);
  pointer-events: none;
}

/* lines */
.bullet-plugin-enhanced-vertical-line-hover .markdown-source-view.mod-cm6 {
  --indentation-guide-color: color-mix(
    in oklch,
    var(--text-normal) 26%,
    transparent
  );
}

.markdown-source-view.mod-cm6 .bullet-plugin-outer-list-guide {
  position: absolute;
  inset-block: 0;
  inset-inline-start: calc(-1 * var(--list-indent));
  width: var(--list-indent);
  pointer-events: auto;
}

.markdown-source-view.mod-cm6 .bullet-plugin-outer-list-guide::before {
  content: "";
  position: absolute;
  inset-block: 0;
  inset-inline-end: 0;
  border-inline-end: var(--indentation-guide-width) solid
    var(--indentation-guide-color);
}

body:not(.is-mobile)
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide::before {
  inset-inline-start: 0;
  inset-inline-end: auto;
}

.bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"] {
  cursor: pointer;
  z-index: 2;
}

.markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide.bullet-plugin-selected-outer-list-guide::before {
  border-inline-end: var(--indentation-guide-width-active) solid
    var(--indentation-guide-color-active);
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide.bullet-plugin-selected-outer-list-guide::before {
  inset-inline-end: -1px;
  inline-size: 3px;
  border-inline-end: 0;
  background-color: var(--indentation-guide-color-active);
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide.bullet-plugin-selected-outer-list-guide.bullet-plugin-selected-outer-list-guide-start::before {
  border-start-start-radius: 2px;
  border-start-end-radius: 2px;
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide.bullet-plugin-selected-outer-list-guide.bullet-plugin-selected-outer-list-guide-end::before {
  border-end-start-radius: 2px;
  border-end-end-radius: 2px;
}

body:not(.is-mobile).bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide.bullet-plugin-selected-outer-list-guide::before {
  inset-inline-start: -1px;
  inset-inline-end: auto;
}

.bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide::before {
  border-inline-end: var(--indentation-guide-width-active) solid
    var(--indentation-guide-color-active);
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide::before {
  inset-inline-end: -1px;
  inline-size: 3px;
  border-inline-end: 0;
  background-color: var(--indentation-guide-color-active);
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide.bullet-plugin-hovered-outer-list-guide-start::before {
  border-start-start-radius: 2px;
  border-start-end-radius: 2px;
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide.bullet-plugin-hovered-outer-list-guide-end::before {
  border-end-start-radius: 2px;
  border-end-end-radius: 2px;
}

body:not(
    .is-mobile
  ).bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide::before {
  inset-inline-start: -1px;
  inset-inline-end: auto;
}

.bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent {
  cursor: pointer;
}

.markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide::before {
  border-inline-end: var(--indentation-guide-width-active) solid
    var(--indentation-guide-color-active);
}
/* ... */

